# webscraper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
header/: dataManager.h  mainwindow.h
src/: dataManager.cpp  main.cpp  mainwindow.cpp
